# para-bot

./: README.md  pyproject.toml
datasets/: training_data.spacy
datasets/dates/: dates.json  dates.py  dates.txt  dates_generator.py
datasets/names/: names.json  names.py  names.txt
datasets/numbers/: numbers.json  numbers.txt  nums.py
model/: config.cfg  learn.sh
notebooks/: SentenceSegmentation.ipynb  UsersQueryRecognition.ipynb
scripts/: model.py
src/: main.py  server.py
src/alembic/: env.py
src/alembic/versions/: 04ff4f1c94d3_fix_remove_unique_constraints_from_all_.py  15b31b2b46cf_feat_cases.py  3a323ccd510b_chore_return_indexes.py  4d87d5385a20_chore_temporarily_remove_indexes_for_.py  52da8c471998_feat_subjects.py  7a4d7411a4e6_fix_remove_unique_constraint_from_pp.py  9bad83ca1613_init_revision.py
src/api/: base_router.py  names_router.py  query_router.py  subjects_router.py  surnames_router.py
src/core/: settings.py
src/db/: connection.py
src/entities/: name.py  subject.py  surname.py
src/entities/dto/: names_dto.py  subjects_dto.py  surnames_dto.py
src/repository/: names_repository.py  subjects_repository.py  surnames_repository.py
src/service/: model.py  names_service.py  params_recognition_service.py  query_recognition_service.py  subjects_service.py  surnames_service.py
src/service/create_datasets/: dates.py  dates_generator.py  names.py  nums.py
src/utils/: AllOptional.py
