[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Sergey Mikheev <sergeypolosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.5.0"
torch = "^1.13.1"
transformers = "^4.26.1"
scikit-learn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
