[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Sergey Mikheev <sergeypolosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.5.0"
torch = "^1.13.1"
transformers = "^4.26.1"
scikit-learn = "^1.2.1"
pydantic = "^1.10.5"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"
uvicorn = "^0.20.0"
fastapi = "^0.92.0"
pymorphy2 = "^0.9.1"
pymystem3 = "^0.2.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
